# adas

./: .gitignore  CMakeLists.txt  config.json  pyproject.toml
include/: config.hpp  lane_engine.hpp  model_base.hpp  pipeline.hpp  video_source.hpp  yolo_engine.hpp
kernels/: preprocess.cu
notebooks/: finetune_yolo.ipynb
src/: lane_engine.cpp  main.cpp  pipeline.cpp  video_source.cpp  yolo_engine.cpp
tools/: export_yolo_to_TRT.ipynb  prepare_the_video.ipynb
